--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@clerk/clerk-react": "^4.20.5",
+    "@clerk/nextjs": "^4.21.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
