setup fileupload for newpost

--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,5 @@ DB=mongodb://localhost:27017/toktok
 TOKEN_SECRET=djkapem14Hgaze_8764jksolioae_34_jashe
 CLOUDINARY_CLOUD_NAME=dpmelaxfj
 CLOUDINARY_API_KEY=758378997222468
-CLOUDINARY_API_SECRET= wgAwxfnEyNsDdfFd9kA
+CLOUDINARY_API_SECRET=7wgAwxfnEyNsDdfFd9kA-lPxzEg
+
