--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 BE_PORT=4000
-DB=mongodb://localhost:27017/toktok
+DB=mongodb+srv://codesfromannywhere:OAGFvZEE1faMYpTf@myfirstcluster.qfa6mbv.mongodb.net/toktok?retryWrites=true&w=majority
 TOKEN_SECRET=djkapem14Hgaze_8764jksolioae_34_jashe
 CLOUDINARY_CLOUD_NAME=dpmelaxfj
 CLOUDINARY_API_KEY=758378997222468
 CLOUDINARY_API_SECRET=7wgAwxfnEyNsDdfFd9kA-lPxzEg
-
