--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
     "react": "^18.2.0",
+    "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading": "^2.0.3",
