--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18.2.0",
